index frontend contents added

--- a/project/templates/index.html
+++ b/project/templates/index.html
@@ -7,18 +7,23 @@
   <meta name="viewport"
     content="width=device-width, initial-scale=1, maximum-scale=1.0, user-scalable=no, shrink-to-fit=no">
   <title>ClientScope</title>
-  <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
-  <!-- Link to Bootstrap CSS -->
-  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/4.6.0/css/bootstrap.min.css">
-  <!-- Link to Bootstrap JS -->
-  <script src="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/4.6.0/js/bootstrap.min.js"></script>
-  <link rel="stylesheet" href="{%static 'css/login-registration/login.css'%}">
 
-  
+  <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/4.6.0/css/bootstrap.min.css">
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/4.6.0/js/bootstrap.min.js"></script>
+  <script src="https://kit.fontawesome.com/c8e4d183c2.js" crossorigin="anonymous"></script>
+  <link rel="stylesheet"
+    href="https://cdnjs.cloudflare.com/ajax/libs/bootstrap-datepicker/1.9.0/css/bootstrap-datepicker.min.css">
+  <script
+    src="https://cdnjs.cloudflare.com/ajax/libs/bootstrap-datepicker/1.9.0/js/bootstrap-datepicker.min.js"></script>
+
+  <link rel="stylesheet" href="{%static 'css/index.css'%}">
+  <script src="{%static 'js/index.js'%}"></script>
 </head>
 
 <body>
-  <div class="container">
+  <!-- index form -->
+  <div class="index_page container">
     <div class="row justify-content-center align-items-center main-container">
       <h1 class="app-title">ClientScope</h1>
       <div class="col-md-6 col-sm-12 text-center">
@@ -27,6 +32,185 @@
       </div>
     </div>
   </div>
+
+  <!-- login form -->
+  <div class="login_form" style="display:none">
+    <div class="container-fluid d-flex flex-column justify-content-center align-items-center">
+      <h1 class="text-center app-title">Login</h1>
+      <form class="login-form">
+        <div class="form-group">
+          <input type="email" class="form-control" id="email" placeholder="Enter email">
+        </div>
+        <div class="form-group">
+          <input type="password" class="form-control" id="password" placeholder="Password">
+        </div>
+        <button type="submit" class="btn btn-primary btn-block">Submit</button>
+      </form>
+      <a class="to_index back-link"><i class="fas fa-arrow-left"></i> Back</a>
+    </div>
+  </div>
+
+  <!-- Registration form -->
+  <!-- Basic details -->
+  <div class="registration_form" style="display:none">
+    <div class="registration_form_basic" style="display:none">
+      <div class="recontainer-fluid d-flex flex-column justify-content-center align-items-center">
+        <h1 class="text-center app-title">Basic details</h1>
+        <form class="login-form basic_details_form">
+
+          <div class="form-group row">
+            <div class="col-6">
+              <input type="text" class="form-control" placeholder="First Name">
+            </div>
+            <div class="col-6">
+              <input type="text" class="form-control" placeholder="Last Name">
+            </div>
+          </div>
+
+          <div class="form-group">
+            <input type="email" class="form-control" placeholder="Email ID">
+          </div>
+          <div class="form-group">
+            <input type="tel" class="form-control" placeholder="Phone">
+          </div>
+          <div class="form-group">
+            <input type="password" class="form-control" placeholder="Password">
+          </div>
+          <div class="form-group">
+            <input type="password" class="form-control" placeholder="Confirm Password">
+          </div>
+
+          <div class="form-group" style="margin-left:10px;">
+            <p class="mb-2">Who are you?</p>
+            <div class="form-check form-check-inline">
+              <input class="form-check-input" checked type="radio" name="userType" id="clientRadio" value="client">
+              <label class="form-check-label" for="clientRadio">Client</label>
+            </div>
+            <div class="form-check form-check-inline">
+              <input class="form-check-input" type="radio" name="userType" id="professionalRadio" value="professional">
+              <label class="form-check-label" for="professionalRadio">Professional</label>
+            </div>
+          </div>
+
+          <div class="services-select form-group" style="display: none;">
+            <label>Select Services:</label>
+            <div class="serviceIds" style="overflow: auto; max-height:80px;">
+              <div class="form-check">
+                <input class="form-check-input" type="checkbox" value="1" id="treeRemovalCheckbox">
+                <label class="form-check-label" for="treeRemovalCheckbox">Tree removal</label>
+              </div>
+              <div class="form-check">
+                <input class="form-check-input" type="checkbox" value="2" id="roofCleaningCheckbox">
+                <label class="form-check-label" for="roofCleaningCheckbox">Roof cleaning</label>
+              </div>
+              <div class="form-check">
+                <input class="form-check-input" type="checkbox" value="3" id="fenceInstallationCheckbox">
+                <label class="form-check-label" for="fenceInstallationCheckbox">Fence installation</label>
+              </div>
+              <div class="form-check">
+                <input class="form-check-input" type="checkbox" value="4" id="ovenRepairsCheckbox">
+                <label class="form-check-label" for="ovenRepairsCheckbox">Oven repairs</label>
+              </div>
+              <div class="form-check">
+                <input class="form-check-input" type="checkbox" value="5" id="acRepairsCheckbox">
+                <label class="form-check-label" for="acRepairsCheckbox">AC repairs</label>
+              </div>
+              <div class="form-check">
+                <input class="form-check-input" type="checkbox" value="6" id="tileCleaningCheckbox">
+                <label class="form-check-label" for="tileCleaningCheckbox">Tile cleaning</label>
+              </div>
+            </div>
+          </div>
+
+
+          <div class="form-group row justify-content-center">
+            <div style="width: 200px;" class="row">
+              <a href="#" class="to_index_basic back-link mr-auto"><i class="fas fa-arrow-left" aria-hidden="true"></i>
+                Back</a>
+              <a href="#" class="to_account front-link ml-auto">Proceed <i class="fas fa-arrow-right"
+                  aria-hidden="true"></i></a>
+            </div>
+          </div>
+
+        </form>
+
+
+      </div>
+
+    </div>
+
+    <div class="registration_form_account" style="display:none">
+      <div class="container-fluid d-flex flex-column justify-content-center align-items-center">
+        <h1 class="text-center app-title">Account details</h1>
+        <form class="login-form account_details_form">
+
+          <div class="client-subscription form-group row">
+            <div class="col-3">
+              <p class="mb-2" style="margin-left:5px;">Subscription</p>
+            </div>
+            <div class="col-9" style="margin-left:10px;">
+              <div class="form-check form-check-inline">
+                <input class="form-check-input" type="radio" checked name="subscriptionType" id="annualRadio"
+                  value="annual">
+                <label class="form-check-label" for="annualRadio">Annual</label>
+              </div>
+
+              <div class="form-check form-check-inline">
+                <input class="form-check-input" type="radio" name="subscriptionType" id="demandRadio" value="demand">
+                <label class="form-check-label" for="demandRadio">Pay on demand</label>
+              </div>
+            </div>
+          </div>
+
+
+          <div class="form-group">
+            <input type="number" class="form-control" placeholder="Card number">
+          </div>
+
+          <div class="form-group row">
+            <div class="col-3 col-md-3">
+              <input type="password" maxlength="3" class="form-control" placeholder="CVV">
+            </div>
+            <div class="col-9 ">
+              <input type="text" class="form-control" id="datepicker" placeholder="Expiry date" required>
+            </div>
+          </div>
+
+          <div class="form-group row justify-content-center">
+            <div style="width: 200px;" class="row">
+              <a href="#" class="to_account_basic back-link mr-auto"><i class="fas fa-arrow-left"
+                  aria-hidden="true"></i> Back</a>
+              <a href="#" onclick="summary()" class="front-link ml-auto">Proceed <i class="fas fa-arrow-right"
+                  aria-hidden="true"></i></a>
+            </div>
+          </div>
+
+        </form>
+
+
+      </div>
+
+      <div id="overlay" style="display: none;">
+        <div id="overlay-message">
+          <div class="content">
+            <h3>Subscription Summary</h3>
+            <p>Subscription Type: Annual</p>
+            <p>Start Date: <span id="strt_date">01/01/2023</span></p>
+            <p>End Date: <span id="end_date">01/01/2023</span></p>
+            <p>Price: $99.99</p>
+          </div>
+          <button class="btn btn-primary btn-lg btn-block" id="login-button">Complete Registration</button>
+        </div>
+      </div>
+
+    </div>
+
+  </div>
+
+
+
+
+
 </body>
 
 </html>
