--- a/project/assets/css/index.css
+++ b/project/assets/css/index.css
@@ -1,16 +1,34 @@
 body {
-    background-color: #f2f2f2;
+    background-color: #F8F8F8;
   }
   
-  .container-fluid {
-    height: 100vh;
-  }
-
   .app-title {
     font-size: 3rem;
     font-weight: bold;
     margin-bottom: 2rem;
     color: #007BFF;
+  }
+  
+  .main-container {
+    height: 100vh;
+  }
+  
+  #login-button {
+    margin-bottom: 1rem;
+  }
+  
+  #signup-button {
+    border-color: #007BFF;
+    color: #007BFF;
+  }
+  
+
+  /* Login form */
+
+
+  
+  .container-fluid {
+    height: 100vh;
   }
   
   .login-form {
@@ -35,39 +53,36 @@ body {
     margin-top: 20px;
   }
   
-  .back-link {
+  .login_form .back-link {
     margin-top: 20px;
     color: #3f3f3f;
     font-weight: 600;
     text-decoration: none;
     display: flex;
     align-items: center;
-    margin-right: 20px;
   }
   
-  .back-link i {
+  .login_form .back-link i {
     margin-right: 10px;
   }
 
-
-  .front-link {
-    margin-top: 20px;
+  .registration_form .back-link {
     color: #3f3f3f;
     font-weight: 600;
     text-decoration: none;
     display: flex;
     align-items: center;
   }
-  
-  .front-link i {
-    margin-left: 10px;
+
+  .serviceIds {
+    background-color: white;
+    padding: 5px;
+    border-radius: 5px;
+    box-shadow: 0px 0px 5px rgba(0, 0, 0, 0.5);
   }
-  
 
 
-
-
-/* Overlay */
+  /* Overlay */
 #overlay {
   position: fixed;
   top: 0;
@@ -90,4 +105,4 @@ body {
   margin-top: 0;
 }
 
-
+  
