--- a/project/templates/index.html
+++ b/project/templates/index.html
@@ -37,12 +37,13 @@
   <div class="login_form" style="display:none">
     <div class="container-fluid d-flex flex-column justify-content-center align-items-center">
       <h1 class="text-center app-title">Login</h1>
-      <form class="login-form">
+      <form class="login-form" action="/login" method="post">
+        {% csrf_token %}
         <div class="form-group">
-          <input type="email" class="form-control" id="email" placeholder="Enter email">
+          <input type="email" class="form-control" id="email" name="email"  placeholder="Enter email">
         </div>
         <div class="form-group">
-          <input type="password" class="form-control" id="password" placeholder="Password">
+          <input type="password" class="form-control" id="password" name="password" placeholder="Password">
         </div>
         <button type="submit" class="btn btn-primary btn-block">Submit</button>
       </form>
