--- a/project/templates/client_ongoing_open.html
+++ b/project/templates/client_ongoing_open.html
@@ -1,13 +1,16 @@
-<div class="client_ongoing_card row">
+{%load static%}
+<!-- {% with result_class='request_num_'|add:request.name|default:'!!' %} -->
+<div class="client_ongoing_card row" data-request-id="{{ request.id }}">
+
     <div class="col-12">
         <div class="parent-div overflow-auto">
             <div class="child-div">
-                <h5 class="title">Tile cleaning</h5>
+                <h5 class="title">{{request.name}}</h5>
 
                 <!-- Waiting for professionals -->
                 <div class="child-div-1 client_ongoing_card_child">
                     <div class="waiting-div text-center justify-content-center">
-                        <img src="../assets/timer.png" alt="waiting clipart">
+                        <img src="{%static 'img/timer.png'%}" alt="waiting clipart">
                         <h5>Waiting for professionals</h5>
                     </div>
                 </div>
@@ -16,3 +19,5 @@
         </div>
     </div>
 </div>
+
+<!-- {% endwith %} -->
