--- a/project/templates/client_ongoing_unaccepted.html
+++ b/project/templates/client_ongoing_unaccepted.html
@@ -1,4 +1,4 @@
-<div class="client_ongoing_card row" data-request-id="{{ request.id }}">
+<div class="client_ongoing_card row">
     <div class="col-12">
         <div class="parent-div overflow-auto">
             <div class="child-div">
