--- a/project/static-files/css/professional.css
+++ b/project/static-files/css/professional.css
@@ -113,3 +113,24 @@ body {
     justify-content: space-between;
   }
   
+  /* #logout */
+.logout-button {
+  position: fixed;
+  bottom: 20px;
+  right: 20px;
+  background-color: #fff;
+  border-radius: 50%;
+  padding: 10px;
+  box-shadow: 0 2px 4px rgba(0, 0, 0, 0.2);
+  z-index: 9999;
+
+  width: 45px;
+  height: 45px;
+}
+
+.logout-button img {
+  width: 45px;
+  height: 45px;
+
+  transform: translate(-23%, -28%);
+}
