--- a/project/templates/client_ongoing_ongoing.html
+++ b/project/templates/client_ongoing_ongoing.html
@@ -2,7 +2,7 @@
     <div class="col-12">
         <div class="parent-div overflow-auto">
             <div class="child-div">
-                <h5 class="title">Oven cleaning</h5>
+                <h5 class="title">{{request.name}}</h5>
 
                 <!-- After choosing a professional -->
                 <div class="client_ongoing_card_child">
@@ -11,15 +11,15 @@
 
                     </div>
                     <div class="row mt-2">
-                        <div class="col-6">Name: John Doe</div>
-                        <div class="col-6">Contact No: 1234567890</div>
+                        <div class="col-6">Name: {{request.pro_name}}</div>
+                        <div class="col-6">Contact No: {{request.phone}}</div>
                     </div>
                     <div class="row mt-2">
-                        <div class="col-12">Email: john.doe@example.com</div>
+                        <div class="col-12">Email: {{request.email}}</div>
                     </div>
                     <div class="row mt-2 justify-content-center">
                         <div class="col-6"><button class="btn btn-primary col-12"
-                                style="background-color: green;">Complete Task</button></div>
+                                style="background-color: green;" data-request-id="{{ request.id }}">Complete Task</button></div>
                     </div>
                 </div>
 
