--- a/project/templates/homepage_base_pro.html
+++ b/project/templates/homepage_base_pro.html
@@ -52,7 +52,7 @@
 
     <div id="home_body" class="d-flex justify-content-center">
 
-        <div id="professional_requests_container" style="display: none;" class="container-fluid">
+        <div id="professional_requests_container" style="display: none;width: 90%;" class="container-fluid">
         </div>
 
         <!-- Overlay div to view further details -->
@@ -72,6 +72,23 @@
                 <div class="button-container">
                     <button class="btn btn-success job-details-accept">Accept</button>
                     <button class="btn btn-danger job-details-reject">Reject</button>
+                </div>
+            </div>
+        </div>
+
+        <!-- Overlay div to view ongoing details -->
+        <div id="ongoing-details" class="overlay" style="display: none;">
+            <div class="overlay-content">
+                <h3>Tree removal</h3>
+                <div class="scrollable-div">
+                    <ol class="ongoing-list" style="padding-left: 20px;">
+                        <li>Client Name : Nameless user</li>
+                        <li>Location : 123, XYZ street, NSW.</li>
+                        <li>Number of Trees : 5</li>
+                        <li>Should it be moved? : Yes</li>
+                        <li>Estimated fee : $60</li>
+                    </ol>
+
                 </div>
             </div>
         </div>
