--- a/project/assets/css/professional.css
+++ b/project/assets/css/professional.css
@@ -134,3 +134,18 @@ body {
 
   transform: translate(-23%, -28%);
 }
+
+/* History */
+
+.card-container {
+  width: 100%;
+  overflow-x: auto;
+  white-space: nowrap;
+}
+
+.card-item {
+  display: inline-block;
+  padding: 10px;
+  margin-right: 10px;
+  background-color: #f5f5f5;
+}
