All Service requests added

--- a/project/templates/homepage_base_client.html
+++ b/project/templates/homepage_base_client.html
@@ -130,7 +130,7 @@
                         <input type="hidden" value="2" name="formId">
                         <div class="form-group">
                             <label for="roof-type">Type of roofs:</label>
-                            <select class="form-control" id="roof-type">
+                            <select class="form-control" name="roof_type" id="roof-type">
                                 <option value="clay-roof">Clay roof</option>
                                 <option value="concrete-roof">Concrete roof</option>
                                 <option value="metal-roof">Metal roof</option>
@@ -139,11 +139,11 @@
                         </div>
                         <div class="form-group">
                             <label for="roof-area">Area in square metre:</label>
-                            <input type="number" class="form-control" id="roof-area">
+                            <input type="number" class="form-control" id="roof-area" name="roof_area">
                         </div>
                         <div class="form-group">
                             <label for="location">Location details:</label>
-                            <input type="text" class="form-control" id="location">
+                            <input type="text" class="form-control" name="location" id="location">
                         </div>
                         <div class="form-group">
                             <button type="button" class="btn btn-primary">Submit</button>
@@ -166,11 +166,11 @@
                         <input type="hidden" value="3" name="formId">
                         <div class="form-group">
                             <label for="fence-area">Area in square metre:</label>
-                            <input type="number" class="form-control" id="fence-area">
+                            <input type="number" class="form-control" name="fence_area" id="fence-area">
                         </div>
                         <div class="form-group">
                             <label for="location">Location details:</label>
-                            <input type="text" class="form-control" id="location">
+                            <input type="text" class="form-control" name="location" id="location">
                         </div>
                         <div class="form-group">
                             <button type="button" class="btn btn-primary">Submit</button>
@@ -193,14 +193,14 @@
                         <div class="form-group">
                             <label for="oven-type">Type of oven:</label>
                             <div class="form-check">
-                                <input class="form-check-input" type="radio" name="oven-type" id="ordinary-oven"
+                                <input class="form-check-input" type="radio" name="oven_type" id="ordinary-oven"
                                     value="ordinary-oven">
                                 <label class="form-check-label" for="ordinary-oven">
                                     Ordinary
                                 </label>
                             </div>
                             <div class="form-check">
-                                <input class="form-check-input" type="radio" name="oven-type" id="convection-oven"
+                                <input class="form-check-input" type="radio" name="oven_type" id="convection-oven"
                                     value="convection-oven">
                                 <label class="form-check-label" for="convection-oven">
                                     Convection
@@ -209,7 +209,7 @@
                         </div>
                         <div class="form-group">
                             <label for="location">Location details:</label>
-                            <input type="text" class="form-control" id="location">
+                            <input type="text" class="form-control" name="location" id="location">
                         </div>
                         <div class="form-group">
                             <button type="button" class="btn btn-primary">Submit</button>
@@ -231,11 +231,11 @@
                         <input type="hidden" value="5" name="formId">
                         <div class="form-group">
                             <label for="units">Number of AC units:</label>
-                            <input type="number" class="form-control" id="units">
+                            <input type="number" class="form-control" name="count" id="units">
                         </div>
                         <div class="form-group">
                             <label for="location">Location details:</label>
-                            <input type="text" class="form-control" id="location">
+                            <input type="text" class="form-control" name="location" id="location">
                         </div>
                         <div class="form-group">
                             <button type="button" class="btn btn-primary">Submit</button>
@@ -258,7 +258,7 @@
                         <input type="hidden" value="6" name="formId">
                         <div class="form-group">
                             <label for="roof-type">Type of tiles:</label>
-                            <select class="form-control" id="roof-type">
+                            <select class="form-control" name="tile_type" id="roof-type">
                                 <option value="ceramic-tile">Ceramic tiles</option>
                                 <option value="natural-tile">Natural Stone Tiles</option>
                                 <option value="mosaic-tile">Mosaic Tiles</option>
@@ -268,11 +268,11 @@
 
                         <div class="form-group">
                             <label for="roof-area">Area in square metre:</label>
-                            <input type="number" class="form-control" id="roof-area">
+                            <input type="number" class="form-control" name="tile_area" id="roof-area">
                         </div>
                         <div class="form-group">
                             <label for="location">Location details:</label>
-                            <input type="text" class="form-control" id="location">
+                            <input type="text" class="form-control" name="location" id="location">
                         </div>
                         <div class="form-group">
                             <button type="button" class="btn btn-primary">Submit</button>
