--- a/project/templates/homepage_base_pro.html
+++ b/project/templates/homepage_base_pro.html
@@ -58,7 +58,7 @@
         <!-- Overlay div to view further details -->
         <div id="job-details" class="overlay" style="display: none;">
             <div class="overlay-content">
-                <h3>Tree removal</h3>
+                <h3 id="details-title">Tree removal</h3>
                 <div class="scrollable-div">
                     <ol class="details-list" style="padding-left: 20px;">
                         <li>Client Name : Nameless user</li>
@@ -79,7 +79,7 @@
         <!-- Overlay div to view ongoing details -->
         <div id="ongoing-details" class="overlay" style="display: none;">
             <div class="overlay-content">
-                <h3>Tree removal</h3>
+                <h3 id="details-title">Tree removal</h3>
                 <div class="scrollable-div">
                     <ol class="ongoing-list" style="padding-left: 20px;">
                         <li>Client Name : Nameless user</li>
