--- a/project/templates/pro_ongoing_entry.html
+++ b/project/templates/pro_ongoing_entry.html
@@ -13,7 +13,7 @@
                 </p>
             </div>
             <div class="col-5 d-flex justify-content-end">
-                <button class="btn btn-primary btn-sm ongoing-details" style="max-height: 35px;" data-content="{{ req.extra }}">View details</button>
+                <button class="btn btn-primary btn-sm ongoing-details" style="max-height: 35px;" data-nmcontent="{{ req.name }}" data-content="{{ req.extra }}">View details</button>
             </div>
         </div>
     </div>
